# lium

./: .gitignore  Dockerfile.build  README.md  install-mine.sh  lium.spec  lium_entry.py  mine.sh  pyproject.toml
.docs/: gpu-splitting-setup-plan.md
.github/workflows/: ci.yml  release-deprecate-lium-cli.yml  release-lium-alias.yml  release.yml
docs/: binary-builds.rst  conf.py  getting-started.rst  index.rst
docs/api/: lium.sdk.ExecutorInfo.rst
lium/: __about__.py  __init__.py
lium/cli/: balance.py  cli.py  plugin_example.py  self_update.py  settings.py  themed_console.py  utils.py
lium/miner/: __init__.py  _routes.py  auth.py  client.py  errors.py  models.py  portal_http.py  token_store.py  wallet.py
lium/provider/: __init__.py  _routes.py  _shared_config.py  auth.py  client.py  errors.py  models.py  portal_http.py  token_store.py  wallet.py
lium/sdk/: __init__.py  client.py  config.py  decorators.py  models.py  ssh_key_cache.py
scripts/: build.sh  install.sh
stubs/lium/: README.md  pyproject.toml
stubs/lium-cli/: README.md  pyproject.toml
test/: test_backup_cli.py  test_binary_build_runtime.py  test_cli_settings.py  test_client_ls_widen.py  test_ephemeral_templates.py  test_fund_cli.py  test_fund_retired.py  test_gpu_splitting_cli.py  test_gpu_splitting_storage.py  test_ls_cuda_filter.py  test_ls_tier.py  test_nowpayments_cli.py  test_release_binary_targets.py  test_sdk_client.py  test_sdk_ssh.py  test_self_update.py  test_topup_cli.py  test_up_dockerfile.py
test/fixtures/: splittable_executors.json
test/miner/: conftest.py  test_auth.py  (+10 more)
(+96 files in other folders)
